--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ yarn-error.log
 
 # Bundle artifact
 *.jsbundle
+.bundle
 
 # Ruby / CocoaPods
 /ios/Pods/
@@ -61,3 +62,6 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# VSCode
+.vscode
