--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-native-clipboard/clipboard": "^1.9.0",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/auth": "^17.3.2",
     "@react-native-firebase/database": "^17.3.2",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@reduxjs/toolkit": "^1.9.3",
+    "crypto-js": "^3.1.9-1",
     "jsdoc": "^4.0.2",
     "metro-react-native-babel-preset": "^0.76.0",
     "moment": "^2.29.1",
