--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "crypto-js": "^3.1.9-1",
     "jsdoc": "^4.0.2",
     "moment": "^2.29.1",
+    "moti": "^0.24.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-base64": "^0.2.1",
     "react-native-device-info": "^10.4.0",
     "react-native-elements": "^3.4.3",
     "react-native-flags": "^1.0.0",
-    "react-native-fullscreen-chz": "^4.0.13",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
